# advent_of_code

./: .gitignore  CMakeLists.txt  README.md
include/: utils.h
include/2022/: day2.h  tasks.h
src/2022/: day1.cpp  day2.cpp  main.cpp
